# pygeometa

./: .gitignore  .travis.yml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  MANIFEST.in  MCF_Reference.md  README.md  SECURITY.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  sample-tdml-ai.yml  sample-wmo-wigos.mcf.yml  sample-wmo-wigos.yml  sample.mcf  sample.mcf.yml  sample.yml  search.json  setup.py  sitemap.xml
.github/workflows/: containers.yml  docs.yml  main.yml  presentations.yml  vulnerabilities.yml
debian/: changelog  control  copyright  rules
doc/: HNAP-schema.md  MCF_Reference.md  README_presentation.md  wmo-cmp.md  wmo-wigos.md
docs/: README.md  mkdocs.yml  zensical.toml
docs/content/: index.md  pygeoapi-plugin.md  schema-support.md  tutorial.md
docs/content/reference/: index.md  mcf.md
docs/content/reference/extensions/: iso19139-2.md  iso19139-hnap.md  wmo-cmp.md  wmo-wcmp2.md  wmo-wigos.md
docs/content/reference/formats/: hnap.md  iso19139-2.md  iso19139-hnap.md  wmo-cmp.md  wmo-wcmp2.md  wmo-wigos.md
docs/presentations/: test.qmd
pygeoapi-plugin/: index.html
pygeometa/: __init__.py  cli_options.py  core.py  helpers.py  migrations.py  pygeoapi_plugin.py  test_getcharstring.py  test_script.sh  util.py
pygeometa/schemas/: __init__.py  base.py  util.py
pygeometa/schemas/common/: iso19139-charstring.j2
pygeometa/schemas/csvw/: __init__.py
pygeometa/schemas/cwl/: __init__.py
pygeometa/schemas/dcat/: __init__.py
pygeometa/schemas/gbif_eml/: __init__.py  main.j2  person.j2
pygeometa/schemas/iso19139/: __init__.py  contact.j2  main.j2
pygeometa/schemas/iso19139_2/: __init__.py  main.j2
pygeometa/schemas/iso19139_hnap/: __init__.py  charstring.j2  contact.j2  main.j2
pygeometa/schemas/mcf/: core.yaml  core.yml  iso19139_2.yaml  iso19139_2.yml  wmo-cmp.yaml  wmo-cmp.yml  wmo-wcmp2.yaml  wmo-wigos.yaml  wmo-wigos.yml
pygeometa/schemas/mmd/: __init__.py
pygeometa/schemas/ogc_api_records/: __init__.py
pygeometa/schemas/ogcapi_records/: __init__.py
pygeometa/schemas/openaire/: __init__.py
pygeometa/schemas/schema_org/: __init__.py
pygeometa/schemas/stac/: __init__.py
pygeometa/schemas/tdml_ai/: __init__.py
pygeometa/schemas/tdml_ai_oarec/: __init__.py
pygeometa/schemas/wmo_cmp/: __init__.py  contact.j2  main.j2
pygeometa/schemas/wmo_wcmp2/: __init__.py
pygeometa/schemas/wmo_wigos/: __init__.py  contact.j2  main.j2
pygeometa/templates/common/: iso19139-charstring.j2
pygeometa/templates/iso19139/: contact.j2  main.j2
pygeometa/templates/iso19139-hnap/: contact.j2  main.j2
pygeometa/templates/wmo-cmp/: contact.j2  main.j2
pygeometa/templates/wmo-wigos/: contact.j2  main.j2
reference/: index.html
reference/extensions/iso19139-2/: index.html
reference/extensions/iso19139-hnap/: index.html
reference/extensions/wmo-cmp/: index.html
reference/extensions/wmo-wcmp2/: index.html
reference/extensions/wmo-wigos/: index.html
reference/formats/iso19139-2/: index.html
reference/formats/iso19139-hnap/: index.html
reference/formats/wmo-cmp/: index.html
reference/formats/wmo-wcmp2/: index.html
reference/formats/wmo-wigos/: index.html
reference/mcf/: index.html
schema-support/: index.html
search/: search_index.json
tests/: 707a02ac-9240-4a2d-afbd-395b69756534.xml  bad-version.mcf.yml  bad-version.yml  base-distribution.yml  base-metadata.mcf.yml  base-metadata.yml  broken-yaml.mcf.yml  broken-yaml.yml  child.mcf  child.mcf.yml  child.yml  contact.yml  dates-pre-1900.mcf.yml  dates-pre-1900.yml  dcat.jsonld.json  dcat.rdf.xml  dcat2.ttl  dcat3.json  deep-nest-child.mcf.yml  deep-nest-child.yml  deep-nest-parent.mcf.yml  deep-nest-parent.yml  eml.xml  iso19139-no-bbox.xml  md-SMJP01RJTD-gmd.xml  missing-version.mcf.yml  missing-version.yml  nil-identification-language.mcf  nil-identification-language.mcf.yml  nil-identification-language.yml  openaire.json  run_tests.py  sample-child.mcf.yml  sample-child.yml  unilingual.mcf  unilingual.mcf.yml  unilingual.yml  x-wmo-md-int.wmo.wis.ISMD01EDZW.xml
tests/sample_schema/: __init__.py  contact.j2
tests/sample_schema_j2/: contact.j2  main.j2
tutorial/: index.html
